# photodriver

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini
photodriver/: __init__.py  __main__.py  checkbox.py  driver.py  main.py  photo_scroller.py  photodriver.py  photos.py
scripts/: generate_test_images.py
tests/: conftest.py  get_linux64_geckodriver.sh  test_functional.py  test_photodriver.py  test_photos.py
tests/test_images/: generate_test_images.py  photo_list.py
