[tool.poetry]
name = "photodriver"
version = "0.1.0" # Remember to bump __init__.py too
description = ""
authors = ["sneakypete81 <sneakypete81@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.scripts]
photodriver = "photodriver.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pyhamcrest = "^1.9"
pytest = "^4.6"
tox = "^3.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
